--- a/concepts/integration-scalability/integration-patterns.mdx
+++ b/concepts/integration-scalability/integration-patterns.mdx
@@ -1,181 +1,246 @@
 ---
-title: "Integration Patterns and Toolchains"
-description: "Discusses typical integration strategies with build systems (CMake, Bazel), CI/CD pipelines, and external dependencies. Outlines approaches for embedding GoogleTest and GoogleMock in diverse development environments."
+title: "Integration Patterns and Extensibility"
+description: "Review common patterns for integrating GoogleTest and GoogleMock into different build systems and the extension points for customizing test behavior. This includes setting up main runners, environment management, and leveraging custom actions or matchers."
 ---
 
-# Integration Patterns and Toolchains
+# Integration Patterns and Extensibility
 
-This guide covers common strategies for integrating GoogleTest and GoogleMock into your build systems, continuous integration/deployment (CI/CD) pipelines, and external dependencies. It focuses specifically on embedding the frameworks within popular build tools like CMake and Bazel and outlines approaches that enable seamless and maintainable test integration in diverse development environments.
-
----
-
-## Understanding Integration Needs
-
-Integrating GoogleTest and GoogleMock effectively requires adapting to your existing build system and automation infrastructure. Your goals are to:
-
-- Compile and link GoogleTest/GoogleMock correctly alongside your production code.
-- Maintain manageable source tree organization to ease project maintenance.
-- Enable reliable automatic test discovery and execution.
-- Support CI/CD pipelines by facilitating automated builds and test runs.
-- Handle external dependencies to avoid brittle or complex setups.
-
-This guide introduces proven integration patterns tailored for typical workflows.
+Successfully integrating GoogleTest and GoogleMock into your build system is crucial for seamless test execution and extensibility. This guide walks you through common integration approaches, discusses environment management, illustrates how to customize test behavior, and explores extension points like custom actions and matchers. Whether you’re setting up a main test runner or enhancing mock behaviors, this guide empowers you to tailor the framework to your project’s needs.
 
 ---
 
-## Integration with Build Systems
+## 1. Integrating GoogleTest and GoogleMock with Build Systems
 
-### CMake Integration
+GoogleTest and GoogleMock are designed to integrate smoothly with popular C++ build tools, enabling robust test automation within your development environment.
 
-CMake is the most commonly used build system for C++ projects integrating GoogleTest. Here’s a typical approach:
+### 1.1 Common Build System Support
 
-1. **Add GoogleTest as an external dependency:**
-   - Use `FetchContent` or add GoogleTest as a git submodule.
-   - Prefer to build googletest along with your project to handle compiler and platform compatibility automatically.
+- **CMake Integration**: The recommended approach for modern C++ projects. GoogleTest provides CMake scripts (`CMakeLists.txt`) that allow you to add it as a subdirectory or use pre-installed packages. This ensures compiler and linker settings remain consistent between your application and tests.
 
-2. **Link test targets with GoogleTest and GoogleMock libraries:**
+- **Bazel Integration**: For Bazel-based projects, you can incorporate GoogleTest and GoogleMock by declaring dependencies in your build files. This integration supports scalable, hermetic builds optimized for large codebases.
 
-   ```cmake
-   enable_testing()
-   
-   add_subdirectory(googletest)
+- **Manual Integration**: Alternatively, you can include GoogleTest and GoogleMock sources directly, adjusting include paths and linking appropriately.
 
-   add_executable(my_tests test_main.cc my_test.cc)
-   target_link_libraries(my_tests gtest gmock pthread) # pthread for POSIX systems
+  ```cmake
+  # FetchContent example for GoogleTest in CMake
+  include(FetchContent)
+  FetchContent_Declare(
+    googletest
+    URL https://github.com/google/googletest/archive/refs/tags/release-1.17.0.zip
+  )
+  FetchContent_MakeAvailable(googletest)
 
-   add_test(NAME MyTests COMMAND my_tests)
-   ```
+  add_executable(MyTests test_main.cpp my_tests.cpp)
+  target_link_libraries(MyTests gtest_main gmock_main)
+  add_test(NAME MyTests COMMAND MyTests)
+  ```
 
-3. **Organize test code cleanly:**
-   - Separate test sources from production sources.
-   - Keep mocks and test helpers isolated in dedicated test directories.
+### 1.2 Linking Strategies
 
-4. **Common CMake pitfalls to avoid:**
-   - Ensure consistent compiler and C++ standard flags between your code and GoogleTest.
-   - Link with required threading libraries (`pthread` on Linux, Windows equivalent if needed).
-   - Do not mix Debug and Release builds inadvertently.
+- Use `gtest` for GoogleTest only, or `gmock` if you need mocking capabilities.
+- `gmock_main` is a convenient library that includes a `main()` function.
+- Link your test executables against these libraries and ensure headers are accessible.
 
-### Bazel Integration
+### 1.3 Configuration Setup
 
-For projects using Bazel, GoogleTest and GoogleMock are well-supported:
+- Set the C++ standard (C++17 or newer) in your build to satisfy GoogleTest's requirements.
+- Specify compiler flags and ensure thread support if multithreading tests are anticipated.
 
-- Declare googletest as an external repository.
-- Use `cc_test` rules for your tests, specifying dependencies on `@com_google_googletest//:gtest_main` and `@com_google_googletest//:gmock`.
+## 2. Customizing Your Test Runner and Environment
 
-Example snippet in `BUILD`:
+### 2.1 Writing a Custom Main Function
 
-```bazel
-cc_test(
-    name = "my_test",
-    srcs = ["my_test.cc"],
-    deps = ["@com_google_googletest//:gtest_main", "@com_google_googletest//:gmock"],
-)
+By default, GoogleTest provides a ready-to-use main function through `gtest_main`. However, if you need to customize setup or teardown around your tests, you can write your own main function:
+
+```cpp
+#include <gtest/gtest.h>
+
+int main(int argc, char** argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+
+  // Perform global initialization here
+
+  int result = RUN_ALL_TESTS();
+
+  // Perform global cleanup here
+
+  return result;
+}
 ```
 
-Advantages:
+### 2.2 Managing Global and Test-Level Environments
 
-- Bazel handles dependency resolution, reproducibility, and parallel builds.
-- Simplifies test execution in CI environments.
+GoogleTest allows users to define global environments that perform setup and teardown once for the entire test program:
+
+```cpp
+class MyGlobalEnvironment : public ::testing::Environment {
+public:
+  void SetUp() override {
+    // Initialize shared resources
+  }
+
+  void TearDown() override {
+    // Cleanup shared resources
+  }
+};
+
+int main(int argc, char** argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  ::testing::AddGlobalTestEnvironment(new MyGlobalEnvironment);
+  return RUN_ALL_TESTS();
+}
+```
+
+These environments provide a central place to manage costly or shared resources.
+
+## 3. Extension Points: Custom Actions, Matchers, and Test Behaviors
+
+GoogleTest and GoogleMock expose powerful extension points to craft precise and expressive tests.
+
+### 3.1 Custom Matchers
+
+Matchers verify arguments passed to mock methods. While GoogleMock offers an extensive set of built-in matchers, users can define custom matchers to capture domain-specific validation:
+
+```cpp
+// A simple matcher that checks if an integer is even
+MATCHER(IsEven, "is an even number") {
+    return (arg % 2) == 0;
+}
+
+EXPECT_CALL(mock_obj, Foo(IsEven()));
+```
+
+These can be parameterized and can provide detailed failure messages.
+
+### 3.2 Custom Actions
+
+Actions define what a mock method does when invoked. GoogleMock provides various built-in actions like `Return()`, `SetArgPointee()`, and `Invoke()`.
+
+You can also create your own:
+
+```cpp
+struct MultiplyByFactor {
+  int factor;
+  int operator()(int x) { return x * factor; }
+};
+
+EXPECT_CALL(mock_obj, Compute(_))
+    .WillOnce(MultiplyByFactor{10});
+```
+
+This supports complex behaviors like stateful computations or side effects.
+
+### 3.3 Using ON_CALL and EXPECT_CALL for Behavior and Verification
+
+- Use `ON_CALL` to specify default mock method behavior without expecting calls.
+- Use `EXPECT_CALL` to set expectations that methods are called with specified arguments in specific orders, frequencies, or sequences.
+
+Example:
+
+```cpp
+ON_CALL(mock_obj, GetData(_)).WillByDefault(Return(42));
+EXPECT_CALL(mock_obj, GetData(5)).Times(2).WillRepeatedly(Return(10));
+```
+
+This pattern helps selectively verify critical calls while allowing others to use default behavior.
+
+### 3.4 Strictness Wrappers for Mocks
+
+GoogleMock supports wrappers to control how strictly it treats uninteresting calls:
+
+- `NiceMock<T>` suppresses warnings on calls without expectations.
+- `StrictMock<T>` treats such calls as errors, causing test failures.
+- `NaggyMock<T>` (default) warns but does not fail.
+
+Use these judiciously to balance test rigor and maintenance overhead.
+
+## 4. Managing Test Execution Flow
+
+### 4.1 Event Listener Infrastructure
+
+GoogleTest supports custom event listeners to tap into the test lifecycle:
+
+- Start and end of test programs, iterations, and test cases.
+- Test successes, failures, skips.
+
+You can write listeners for logging, custom reporting, or integration with other tools.
+
+```cpp
+class MyListener : public ::testing::EmptyTestEventListener {
+  void OnTestStart(const ::testing::TestInfo& test_info) override {
+    std::cout << "Starting test: " << test_info.name() << std::endl;
+  }
+  void OnTestEnd(const ::testing::TestInfo& test_info) override {
+    std::cout << "Finished test: " << test_info.name() << std::endl;
+  }
+};
+
+int main(int argc, char** argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  ::testing::TestEventListeners& listeners =
+      ::testing::UnitTest::GetInstance()->listeners();
+  listeners.Append(new MyListener);
+  return RUN_ALL_TESTS();
+}
+```
+
+### 4.2 Test Filtering and Sharding
+
+Control which tests to execute via command line flags or environment variables:
+
+- `--gtest_filter` to include/exclude tests by name patterns.
+- `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX` environment variables to divide tests among shards for parallel execution.
+
+## 5. Practical Tips and Best Practices
+
+- Prefer integration via CMake or Bazel for reproducibility and simplicity.
+- Use `gmock_main` for quick setup, or write a custom main to integrate additional logic.
+- Use global environments to manage expensive setup/teardown shared across tests.
+- Default to `ON_CALL` for behavior and reserve `EXPECT_CALL` for essential verifications to keep tests resilient.
+- Utilize strictness wrappers (`NiceMock`, `StrictMock`) carefully to avoid brittle tests.
+- Extend behavior and verification with custom matchers and actions to express domain constraints clearly.
+- Leverage event listeners to hook into test events for enhanced reporting or integration.
+
+## 6. Troubleshooting Integration Issues
+
+- Ensure your build system configures the include paths and links with necessary GoogleTest/GoogleMock libraries.
+- Confirm C++ standard compliance (at least C++17).
+- For slow compile times, consider moving mock class constructor/destructor definitions into source files.
+- Validate linkage by running the sample tests bundled with GoogleTest.
 
 ---
 
-## CI/CD Pipeline Integration
+## Diagram: Integration Overview Flow
 
-GoogleTest binaries can be integrated into any CI/CD pipeline that supports executing shell commands or scripts.
+```mermaid
+flowchart TD
+  BuildSystem["Build System (CMake/Bazel/Manual)"] --> Configure["Configure Include Paths & Link Libraries"]
+  Configure --> TestRunner["Test Runner Executable"]
+  TestRunner --> InitGoogleTest["Call InitGoogleTest(argc, argv)"]
+  InitGoogleTest --> GlobalEnv["AddGlobalTestEnvironment(s)"]
+  TestRunner --> RunTests["RUN_ALL_TESTS()"]
+  RunTests --> TestSuites["TestSuite & TestInfo Objects"]
+  RunTests --> EventListeners["Event Listener Callbacks"]
+  TestSuites --> Matchers["Apply Expectations & Matchers"]
+  TestSuites --> MockActions["Execute Mock Actions & Verify"]
+  RunTests --> TestResults["Collect & Report Test Results"]
+```
 
-### Typical workflow:
-
-1. **Build your tests:**
-   - Use your configured build system (e.g., CMake, Bazel) to compile test binaries.
-
-2. **Run tests automatically:**
-   - Execute the test runner (compiled test binary). GoogleTest supports output formats that CI systems can parse (e.g., XML via `--gtest_output=xml:report.xml`).
-
-3. **Fail fast and generate reports:**
-   - Configure the CI to fail the build if tests fail.
-   - Publish test reports for visibility.
-
-### Best Practices:
-
-- Keep tests fast and reliable by mocking external dependencies.
-- Run tests in parallel when supported.
-- Integrate with sanitizer tools or code coverage for enhanced insight.
+This flow represents the typical integration and runtime test execution cycle.
 
 ---
 
-## Managing External Dependencies
+## References and Related Documentation
 
-GoogleTest and GoogleMock are often integrated as external dependencies.
+- [Integrating with Build Systems](/guides/integration-and-patterns/build-system-integration)
+- [Mock Object Basics](/guides/mocking-with-gmock/mock-object-basics)
+- [Actions and Expectations](/guides/mocking-with-gmock/actions-and-expectations)
+- [Test Infrastructure API](/api-reference/core-testing-apis/test-infrastructure)
+- [Writing Custom Matchers and Actions](/guides/advanced-testing-patterns/custom-assertions-and-matchers)
 
-### Approaches to manage dependencies:
 
-- **Use Package Managers:**
-  - For CMake, consider CPM.cmake or Hunter package manager to fetch GoogleTest.
-
-- **Git Submodules:**
-  - Include GoogleTest as a git submodule within your repo, making updates explicit.
-
-- **Vendor the Code:**
-  - Directly include GoogleTest source within your project’s directory structure.
-
-Each approach has trade-offs about control, update complexity, and build isolation. Choose based on your project needs.
+For detailed examples and API descriptions, consult the GoogleTest repository and related guides.
 
 ---
 
-## Embedding GoogleTest and GoogleMock in Your Environment
-
-### Key integration considerations:
-
-- **Mock Organization:**
-  - Define mocks close to the code under test when possible,
-  - If mocking third-party interfaces, place mocks in appropriate dedicated test packages or directories to avoid duplication and ease maintenance.
-
-- **Linkage:**
-  - Link tests against both `gtest` and `gmock` libraries.
-  - Include GoogleTest's main where you want test binaries to autolaunch.
-
-- **Compiler and Platform Compatibility:**
-  - Use compatible compiler versions and enable required C++17 support.
-
-- **Test Discovery:**
-  - GoogleTest automatically discovers tests by linking test binary with the framework; no manual enumeration is necessary.
-
----
-
-## Common Troubleshooting Tips
-
-- **Linker Errors:**
-  - Verify correct linking order of libraries.
-  - Ensure all source files with test or mock code are included in the target.
-
-- **Missing Tests:**
-  - Confirm tests are registered (via `TEST` macros).
-  - Check build includes test targets and is executed.
-
-- **Compiler Issues:**
-  - Confirm C++ standard version matches requirements.
-  - Check platform-specific flags.
-
-- **Runtime Failures:**
-  - Use `--gmock_verbose=info` to get detailed mock expectation traces.
-
----
-
-## References and Next Steps
-
-To deepen your understanding and implementation of GoogleTest and GoogleMock in your build and test environment, consult the following key documentation:
-
-- [Using GoogleTest and GoogleMock in Your Build System](../guides/real-world-integration/using-google-test-in-your-build-system.md)
-- [Configuring Projects with GoogleTest](../getting-started/setup-prerequisites-installation/configuring-projects-with-googletest.md)
-- [Troubleshooting Common Setup Issues](../getting-started/troubleshooting-faq-support/common-setup-errors.md)
-- [gMock for Dummies](../docs/gmock_for_dummies.md) for mock usage patterns
-
-These resources provide detailed code examples, explanations, and advanced patterns to ensure successful integration tailored to your environment.
-
----
-
-If you encounter specific integration obstacles, the wider GoogleTest community and issue trackers offer active support and insights.
-
----
-
-*This guide emphasizes practical integration approaches from a user’s perspective to help you embed GoogleTest and GoogleMock within your existing development workflows, accelerating reliable C++ test development and automation.*
+This guide helps you embed GoogleTest and GoogleMock into your C++ build and test cycles with control and flexibility, enabling you to write maintainable, verifiable, and extendable tests efficiently.
